--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,8 @@ jobs: # a collection of steps
       - run: # run tests
           name: test
           command: npm test
-      - run: # run coverage report
-          name: code-coverage
-          command: './node_modules/.bin/nyc report --reporter=text-lcov'
 workflows:
   version: 2
-  pr-check-workflow:
+  build_deploy:
     jobs:
       - build        
