--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,25 @@ jobs: # a collection of steps
       # - run: # run tests
       #     name: test
       #     command: npm test
+
+  build:docker: # run the steps with Docker
+      - image: circleci/node:12.14.1 # ...with this image as the primary container; this is where all `steps` will run
+      # - image: circleci/mysql:5.7.25 # and this image as the secondary service container
+    steps: # a collection of executable commands
+      - checkout # special step to check out source code to working directory
+      - run:
+          name: update-npm
+          # command: echo "Hello world"
+          command: 'sudo npm install -g npm@latest'
+      - run:
+          name: install-npm-wee
+          command: npm install
+
 workflows:
   version: 2
   pr-check-workflow:
     jobs:
-      - pr_check       
+      - pr_check 
+  build_deploy:
+    jobs:
+      - build     
