--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,9 @@ jobs: # a collection of steps
       - run:
           name: install-npm-wee
           command: npm install
-      # - run: # run tests
-      #     name: test
-      #     command: npm test
 
-  build:docker: # run the steps with Docker
+  build:
+    docker: # run the steps with Docker
       - image: circleci/node:12.14.1 # ...with this image as the primary container; this is where all `steps` will run
       # - image: circleci/mysql:5.7.25 # and this image as the secondary service container
     steps: # a collection of executable commands
