--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,12 @@ jobs: # a collection of steps
   pr_check: # runs not using Workflows must have a `build` job as entry point  
     docker: # run the steps with Docker
       - image: circleci/node:12.14.1 # ...with this image as the primary container; this is where all `steps` will run
-      # - image: circleci/mysql:5.7.25 # and this image as the secondary service container
+      - image: circleci/mysql:5.7.25 # and this image as the secondary service container  # - image: circleci/mysql:8.0.4
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: mydb
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
