--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs: # a collection of steps
       - run:
           name: install-npm-wee
           command: npm install
+      - run: # run tests
+          name: test
+          command: npm test
 
   build:
     docker: # run the steps with Docker
