--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 ---
 
-version: 2.1 # use CircleCI 2.1
+version: 2 # use CircleCI 2.1
 jobs: # a collection of steps
   pr_check: # runs not using Workflows must have a `build` job as entry point  
     docker: # run the steps with Docker
@@ -20,9 +20,9 @@ jobs: # a collection of steps
       - run:
           name: install-npm-wee
           command: npm install
-      # - run: # run tests
-      #     name: test
-      #     command: npm test
+      - run: # run tests
+          name: test
+          command: npm test
 
   build:
     docker: # run the steps with Docker
