--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs: # a collection of steps
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: ''
-          MYSQL_ROOT_PASSWORD: root
+          # MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: mydb
           MYSQL_USER: root
           MYSQL_PASSWORD: root
