--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs: # a collection of steps
       - image: circleci/node:12.14.1 # ...with this image as the primary container; this is where all `steps` will run
       - image: circleci/mysql:5.7.25 # and this image as the secondary service container  # - image: circleci/mysql:8.0.4
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_ROOT_PASSWORD: ''
+          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: i$hanr@ghav2
           # MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: clouddb
           MYSQL_USER: root
