--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs: # a collection of steps
       - image: circleci/mysql:5.7.25 # and this image as the secondary service container  # - image: circleci/mysql:8.0.4
         environment:
           # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_ROOT_PASSWORD: i$hanr@ghav2
-          # MYSQL_ROOT_PASSWORD: root
+          # MYSQL_ROOT_PASSWORD: i$hanr@ghav2
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: clouddb
           MYSQL_USER: root
           MYSQL_PASSWORD: root
