--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs: # a collection of steps
       - checkout # special step to check out source code to working directory
       - run:
           name: update-npm
-          # command: echo "Hello world"
+          # command: echo "Hello world"...
           command: 'sudo npm install -g npm@latest'
       - run:
           name: install-npm-wee
