--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha test.js"
+    "test": "mocha test.js --exit"
   },
   "author": "",
   "license": "ISC"
