--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ workflows:
   pr-check-workflow:
     jobs:
       - pr_check 
-  build_deploy:
+  build-deploy-workflow:
     jobs:
       - build:
         filters:
