--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,35 +26,35 @@ jobs: # a collection of steps
           name: test
           command: npm test
 
-  build:
-    docker: 
-      - image: circleci/node:12.14.1 
-      - image: circleci/mysql:5.7.25 
-        environment:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: clouddb
-          MYSQL_USER: root
-    steps: 
-      - checkout 
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - run: 
-          name: test
-          command: npm test
+  # build:
+  #   docker: 
+  #     - image: circleci/node:12.14.1 
+  #     - image: circleci/mysql:5.7.25 
+  #       environment:
+  #         MYSQL_ROOT_PASSWORD: root
+  #         MYSQL_DATABASE: clouddb
+  #         MYSQL_USER: root
+  #   steps: 
+  #     - checkout 
+  #     - run:
+  #         name: update-npm
+  #         command: 'sudo npm install -g npm@latest'
+  #     - run:
+  #         name: install-npm-wee
+  #         command: npm install
+  #     - run: 
+  #         name: test
+  #         command: npm test
 
 workflows:
   version: 2
   pr-check-workflow:
     jobs:
       - pr_check 
-  build-deploy-workflow:
-    jobs:
-      - build:
-        filters:
-          branches:
-            only:
-              -master     
+  # build-deploy-workflow:
+  #   jobs:
+  #     - build:
+  #       filters:
+  #         branches:
+  #           only:
+  #             -master     
