--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,10 @@ workflows:
   pr-check-workflow:
     jobs:
       - pr_check 
-  build_deploy:
+  build-deploy-workflow:
     jobs:
-      - build:
-        filters:
-          branches:
-            only:
-              -master     
+      - build
+        # filters:
+        #   branches:
+        #     only:
+        #       -master     
