updated config for master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,5 +56,4 @@ workflows:
     - build:
         filters:
           branches:
-            only:
-            -master     
+            only: master     
