--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs: # a collection of steps
       - image: circleci/mysql:5.7.25 # and this image as the secondary service container 
         environment:
           # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          # MYSQL_ROOT_PASSWORD: i$hanr@ghav2
+          # MYSQL_ROOT_PASSWORD: 
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: clouddb
           MYSQL_USER: root
