--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.626.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
@@ -13,6 +14,7 @@
     "express": "^4.17.1",
     "mocha": "^7.0.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.3",
