--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,28 @@ jobs: # a collection of steps
       - run:
           name: install-npm-wee
           command: npm install
+      - run:
+          name: Install packages
+          command: sudo apt-get update && sudo apt-get install wget zip unzip && sudo apt-get install python-dev && sudo apt-get install python-pip -y
+      - run:
+          name: Install awscli
+          command: sudo pip install awscli
       - run: 
           name: test
           command: npm test
-
+      - run:
+          name: Zip Artifact
+          command: zip -r csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip * .[^.]*
+      - run:
+          name: Upload Artifact to S3
+          command: |
+            echo "Uploading Artifact to S3 bucket ${BUCKET_NAME}"
+            aws s3 cp csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip s3://${BUCKET_NAME}
+      - run:
+          name: Make CodeDeploy API call
+          command: |
+            echo "Calling CodeDeploy Agent to pick the artifact and deploy on EC2 instance"
+            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=${BUCKET_NAME},bundleType=zip,key=csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip
 workflows:
   version: 2
   pr-check-workflow:
