--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs: # a collection of steps
           command: npm test
       - run:
           name: Zip Artifact
-          command: zip -r csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip * .[^.]*
+          command: zip -r csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip * 
       - run:
           name: Upload Artifact to S3
           command: |
