--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,12 +58,12 @@ jobs: # a collection of steps
           name: Upload Artifact to S3
           command: |
             echo "Uploading Artifact to S3 bucket ${BUCKET_NAME}"
-            aws s3 cp csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip s3://${BUCKET_NAME}
+            aws s3 cp csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip s3://codedeploy.vaibhavikhamar.me
       - run:
           name: Make CodeDeploy API call
           command: |
             echo "Calling CodeDeploy Agent to pick the artifact and deploy on EC2 instance"
-            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=${BUCKET_NAME},bundleType=zip,key=csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip
+            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip
 workflows:
   version: 2
   pr-check-workflow:
