--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,17 +53,17 @@ jobs: # a collection of steps
           command: npm test
       - run:
           name: Zip Artifact
-          command: zip -r csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip * .[^.]*
+          command: zip -r csye6225-codedeploy.zip * .[^.]*
       - run:
           name: Upload Artifact to S3
           command: |
             echo "Uploading Artifact to S3 bucket ${BUCKET_NAME}"
-            aws s3 cp csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip s3://codedeploy.vaibhavikhamar.me
+            aws s3 cp csye6225-codedeploy.zip s3://codedeploy.vaibhavikhamar.me
       - run:
           name: Make CodeDeploy API call
           command: |
             echo "Calling CodeDeploy Agent to pick the artifact and deploy on EC2 instance"
-            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-codedeploy-${CIRCLE_BUILD_NUM}.zip
+            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-codedeploy.zip
 workflows:
   version: 2
   pr-check-workflow:
