--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,30 +2,6 @@
 
 version: 2 # use CircleCI 2
 jobs: # a collection of steps
-  pr_check: 
-    docker: # run the steps with Docker
-      - image: circleci/node:12.14.1 # ...with this image as the primary container; this is where all `steps` will run
-      - image: circleci/mysql:5.7.25 # and this image as the secondary service container 
-        environment:
-          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          # MYSQL_ROOT_PASSWORD: 
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: clouddb
-          MYSQL_USER: root
-          #MYSQL_PASSWORD: root
-    steps: # a collection of executable commands
-      - checkout # special step to check out source code to working directory
-      - run:
-          name: update-npm
-          # command: echo "Hello world"...
-          command: 'sudo npm install -g npm@latest'
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - run: # run tests
-          name: test
-          command: npm test
-
   build:
     docker: 
       - image: circleci/node:12.14.1 
@@ -52,23 +28,37 @@ jobs: # a collection of steps
           name: test
           command: npm test
       - run:
-          name: Zip Artifact
-          command: zip -r csye6225-codedeploy.zip * .[^.]*
-      - run:
-          name: Upload Artifact to S3
+          name: Zip Artifact and upload to S3
           command: |
-            echo "Uploading Artifact to S3 bucket ${BUCKET_NAME}"
-            aws s3 cp csye6225-codedeploy.zip s3://codedeploy.vaibhavikhamar.me
+            AWS_DEFAULT_REGION="us-east-1" aws deploy push \
+            --application-name csye6225-webapp \
+            --description "This is my deployment" \
+            --ignore-hidden-files \
+            --s3-location s3://"codedeploy.vaibhavikhamar.me"/csye6225-webapp-codedeploy-${CIRCLE_BUILD_NUM}.zip \
+            --source .
       - run:
           name: Make CodeDeploy API call
           command: |
             echo "Calling CodeDeploy Agent to pick the artifact and deploy on EC2 instance"
-            aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-codedeploy.zip
+            AWS_DEFAULT_REGION="us-east-1" aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-webapp-codedeploy-${CIRCLE_BUILD_NUM}.zip
+
+
+
+      # - run:
+      #     name: Zip Artifact
+      #     command: zip -r csye6225-codedeploy.zip * .[^.]*
+      # - run:
+      #     name: Upload Artifact to S3
+      #     command: |
+      #       echo "Uploading Artifact to S3 bucket ${BUCKET_NAME}"
+      #       aws s3 cp csye6225-codedeploy.zip s3://codedeploy.vaibhavikhamar.me
+      # - run:
+      #     name: Make CodeDeploy API call
+      #     command: |
+      #       echo "Calling CodeDeploy Agent to pick the artifact and deploy on EC2 instance"
+      #       aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --s3-location bucket=codedeploy.vaibhavikhamar.me,bundleType=zip,key=csye6225-codedeploy.zip
 workflows:
   version: 2
-  pr-check-workflow:
-    jobs:
-    - pr_check 
   build-deploy-workflow:
     jobs:
     - build:
