--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,6 @@ workflows:
   build-deploy-workflow:
     jobs:
     - build:
-        filters:
-          branches:
-            only: master     
+        # filters:
+        #   branches:
+        #     only: master     
