--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.3",
     "tsscmp": "^1.0.6",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
