--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.3",
+    "statsd-client": "^0.4.4",
     "tsscmp": "^1.0.6",
     "uuid": "^3.4.0",
     "winston": "^3.2.1"
