--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "sequelize": "^5.21.3",
     "statsd-client": "^0.4.4",
     "tsscmp": "^1.0.6",
