--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.626.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
