--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai-http": "^4.3.0",
     "expect.js": "^0.3.1",
     "express": "^4.17.1",
+    "loadtest": "^5.0.1",
     "mocha": "^7.0.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
