--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "sequelize": "^5.21.3",
+    "sqs-consumer": "^5.4.0",
     "statsd-client": "^0.4.4",
     "tsscmp": "^1.0.6",
     "uuid": "^3.4.0",
